themes/anthropomorphic/assets/css/main.css
:root {
    --pico-font-family-sans-serif: "Poppins", sans-serif, var(--pico-font-family-emoji);
    --pico-block-spacing-vertical: calc(1.5 * var(--pico-spacing));
    --banner-height: 600px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    --pico-font-family: "Raleway", sans-serif, var(--pico-font-family-emoji);
}

h2,
h3 {
    text-transform: uppercase;
}

h1 {
    --pico-line-height: 1.375;
}

h2 {
    --pico-line-height: 1.45;
}

h3 {
    --pico-line-height: 1.525;
}

h4 {
    --pico-line-height: 1.6;
}

h5 {
    --pico-line-height: 1.675;
}

h6 {
    --pico-line-height: 1.75;
}

hr {
    margin: calc(2.5 * var(--pico-typography-spacing-vertical)) 0;
    border-top-width: 4px;
}

details + hr {
    margin: calc(1.5 * var(--pico-typography-spacing-vertical)) 0;
    border-top-width: 1.6px;
}

@media (min-width: 768px) {
    .featured {
        grid-template-columns: repeat(auto-fit, minmax(max(calc(33% - 2 * var(--pico-grid-column-gap)), 18rem), 1fr));
    }
}

.grid > article {
    display: flex;
    flex-direction: column;
}

.grid > article > p:last-of-type {
    flex: 1;
}

.grid > article > footer {
    margin-top: 0;
}

body > header {
    position: sticky;
    position: -webkit-sticky;
    top: 0;
    z-index: 1;
    padding: 0 1rem;
    background-color: var(--pico-background-color);
    color: var(--pico-color);
}

body > header nav {
    white-space: nowrap;
}

body > header nav li [role=button] {
    margin-bottom: calc(var(--pico-nav-link-spacing-vertical) * -1);
}

.banner {
    height: var(--banner-height);
    margin-top: calc(0rem - var(--pico-block-spacing-vertical));
    margin-bottom: var(--pico-block-spacing-vertical);
}

.banner div {
    position: absolute;
    left: 0;
    width: 100%;
    height: var(--banner-height);
    overflow: hidden;
}

.banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

footer {
    text-align: center;
}

body > footer {
    background-color: var(--pico-background-color);
    color: var(--pico-color);
}

.social {
    font-size: 2em;
    line-height: 0.03125em;
}

.grid div {
    container-type: inline-size;
}

@container (min-width: 100px) {
    .grid img {
        height: 60cqi;
        object-fit: cover;
    }
}

